--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "ai_studio",
   "version": "1.0.0",
+  "type": "git",
+    "url": "https://github.com/Matin-senior/ai-studio.git",
   "description": "The Revolution That Codes Itself",
   "author": "Matin",
   "private": true,
